tests/errors/scoping/undefined_variable.b
fn main() {
    if true {
        x := 1;
    }

    print(x);
}

